@@ -238,7 +238,6 @@ extern object *find_obj_by_type_subtype(const object *who, int type, int subtype
 extern key_value *get_ob_key_link(const object *ob, const char *key);
 extern const char *get_ob_key_value(const object *op, const char *const key);
 extern int set_ob_key_value(object *op, const char *key, const char *value, int add_key);
-extern object *find_best_weapon_used_match(object *pl, const char *params);
 extern int item_matched_string(object *pl, object *op, const char *name);
 extern void fix_multipart_object(object* tmp);
 /* path.c */
